--- a/Gland_Segmentation.ipynb
+++ b/Gland_Segmentation.ipynb
@@ -1058,7 +1058,7 @@
         "    transforms.Resize((250,250)),\n",
         "    transforms.RandomHorizontalFlip(),\n",
         "    transforms.ToTensor(),\n",
-        "    #transforms.ColorJitter()\n",
+        "    transforms.ColorJitter()\n",
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406],std=[0.229, 0.224, 0.225])\n",
         "])"
       ],
